--- a/packaging/aranet4-exporter.service
+++ b/packaging/aranet4-exporter.service
@@ -7,7 +7,7 @@ After=network-online.target
 Type=exec
 EnvironmentFile=/etc/default/aranet4-exporter
 ExecCondition=/usr/bin/test ! -z "${DEVICES}"
-ExecStart=/usr/bin/aranet4-exporter -listen $LISTEN $DEVICES $FLAGS
+ExecStart=/usr/bin/aranet4-exporter -listen $LISTEN $DEVICES -interval $INTERVAL $FLAGS
 Restart=on-failure
 RestartSec=1
 RestartPreventExitStatus=2
